# text-suggestions-iui20

tgt/: Dockerfile  Makefile  pyproject.toml
tgt/scripts/: replay_recs.py
tgt/src/frontend/: package.json
tgt/src/frontend/src/: Apps.js  Dispatcher.js  index.js
tgt/src/textrec/: app.py  automated_analysis.py  onmt_model_2.py  paths.py  util.py
