[tool.poetry]
name = "textrec"
version = "0.1.0"
description = ""
authors = ["Kenneth C. Arnold <kcarnold@alum.mit.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
joblib = "^0.13.0"
spacy = "^2.0"
tornado = "^5.1"
torch = "=0.3.1"
torchtext = "=0.2.3"
h5py = "^2.9"
nltk = "=3.2.5"
wordfreq = "^2.2.1"
pandas = "^0.24"
tqdm = "^4.41.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
